--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Source\LanguageTest.txt">
+    <None Update="Source\test1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
