--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -15,4 +15,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Implementation\Utils\Binders\" />
+  </ItemGroup>
+
 </Project>
