Added a wrapper around Graphvis.
Added ability to export AST to a graph.

--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -16,7 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Implementation\Extensions\" />
     <Folder Include="Implementation\Utils\Binders\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Assignment.Graphviz\Assignment.Graphviz.csproj" />
   </ItemGroup>
 
 </Project>
