Refactored how expression nodes are represented.

--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -10,7 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Source\test1.txt">
+    <None Update="Source\example-arithmetic.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Source\example-variable.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
