--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "antlr4.generation": {
+        "mode": "internal",
+        "language": "Java",
+        "listeners": true,
+        "visitors": true
+    }
 }
