--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "language": "Java",
         "listeners": true,
         "visitors": true
-    }
+    },
+    "graphvizPreview.dotPath": "C:\\Program Files\\GraphVis\\release\\bin\\dot.exe"
 }
